prep: EB postdeploy hook + ebignore + cryptography
